<resources>
    <string name="app_name">LoveLive</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="love_live">Love live</string>
    <string name="let_s_go">Let\'s go</string>
    <string name="by_clicking_get_started_you_agree_with_how_we_process_your_data_learn_more_in_our"><![CDATA[By clicking Let\'s go, you agree with how we process your data & learn more in our]]></string>
    <string name="privacy_policy_and_terms_of_use"><b>Privacy Policy</b> and <b>Terms of use</b></string>
    <string name="skip">Skip</string>
    <string name="choose_your_interest">Choose your interest</string>
    <string name="and_get_a_free_gift">and get a free gift</string>
    <string name="artists">Artists</string>
    <string name="dating">Dating</string>
    <string name="nearby">Nearby</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="live">Live</string>
    <string name="moments">Moments</string>
    <string name="near">Near</string>
    <string name="follow">Follow</string>
    <string name="for_you">For You</string>
    <string name="priyanka_roy">Priyanka Roy</string>
    <string name="come_on_baby">Come on baby 💕</string>
    <string name="all">All</string>
    <string name="liveshow">#LiveShow</string>
    <string name="profile">Profile</string>
    <string name="feeds">Feeds</string>
    <string name="_17_05_2023_11_25">17/05/2023,11:25</string>
    <string name="denis">Denis</string>
    <string name="congratulations_iyah_for_reaching_10_million_diamonds_nhttps_www_google_com">Congratulations IYAH for reaching 10 million diamonds!\nhttps://www.google.com</string>
    <string name="show_all_comments_823">Show all comments(823)</string>
    <string name="username">\@username</string>
    <string name="kk">Kk</string>
    <string name="india">India</string>
    <string name="tap_to_add_description">Tap to add description</string>
    <string name="add_post">Add Post</string>
    <string name="no_post">No Post</string>
    <string name="dil_saaf_hoga_toh_har_gunah_maaf_hoga">Dil saaf hoga toh har gunah maaf hoga</string>
    <string name="creators">Creators</string>
    <string name="families">Families</string>
    <string name="daily">Daily</string>
    <string name="all_time">All Time</string>
    <string name="pareesha">Pareesha</string>
    <string name="_397_372">397,372</string>
    <string name="notifications_for_followers">Notifications for followers</string>
    <string name="sign_up_to_broadcast">Sign Up to Broadcast</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sms">SMS</string>
    <string name="by_logging_in_you_agree_to_our_terms_of_use_and_nprivacy_policy">By logging in,you agree to our <u><b>Terms of use</b></u> and\n<u><b>Privacy Policy</b></u></string>
    <string name="your_web_client_id">948122142799-gi5ikb93ff8caalmqcc9o3prnjrcpohi.apps.googleusercontent.com</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="phone_number">Phone Number</string>
    <string name="next">Next</string>
    <string name="by_logging_in_you_agree_to_our_terms_of_use_and_privacy_policy">By logging in,you agree to our <u><font color='#ff00df'>Terms of Use</font></u> and <u><font color='#ff00df'>Privacy Policy</font></u></string>
    <string name="code_sent_to">Code sent to</string>
    <string name="_91_9999999999">91 9999999999</string>
    <string name="enter_code">Enter Code</string>
    <string name="didn_t_receive_sms_try_again"><u>Didn\'t Receive SMS? Try Again</u></string>
    <string name="edit_phone_number"><u>Edit phone number</u></string>
    <string name="contact_support"><u>Contact Support</u></string>
    <string name="end_live">End Live</string>
</resources>