<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="verifyCodeVm"
            type="com.love.lovelive.ui.fragments.signup.verify.VerifyCodeVm" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.signup.verify.VerifyCodeFragment">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgBack"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:onClick="@{verifyCodeVm::onClickBack}"
            android:layout_marginBottom="@dimen/_15sdp"
            android:src="@drawable/baseline_arrow_back_24"
            app:tint="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/imgBack"
            android:layout_marginTop="@dimen/_50sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/code_sent_to"
                android:layout_gravity="center"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_91_9999999999"
                android:layout_gravity="center"
                android:id="@+id/txtPhone"
                android:textSize="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_code"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_gravity="center"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_code"

                android:textColor="@color/black"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:maxLength="6"
                android:layout_marginTop="@dimen/_10sdp"
                android:id="@+id/etPhone"
                android:inputType="numberPassword"
                android:paddingHorizontal="@dimen/_5sdp"
                android:textSize="@dimen/_13sdp"
                android:backgroundTint="@color/default_pink" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/didn_t_receive_sms_try_again"
                android:id="@+id/txtCountDown"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_10sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_phone_number"
                android:onClick="@{verifyCodeVm::onClickBack}"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_10sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_support"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/default_pink"
                android:layout_marginBottom="@dimen/_30sdp"
                android:textSize="@dimen/_10sdp"/>


        </LinearLayout>



    </RelativeLayout>
</layout>