<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingVertical="@dimen/_10sdp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_to_broadcast"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_round_bg"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:id="@+id/googleSignInBtn"
            android:layout_marginVertical="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/ic_google"
                android:background="@drawable/google_bg"
                android:padding="@dimen/_5sdp"
                android:layout_marginVertical="@dimen/_7sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_with_google"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sms"
            android:textSize="@dimen/_12sdp"
            android:layout_gravity="center"
            android:paddingHorizontal="@dimen/_35sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/sms_bg"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_logging_in_you_agree_to_our_terms_of_use_and_nprivacy_policy"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_15sdp"/>

    </LinearLayout>
</layout>