<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="getStartedVm"
            type="com.love.lovelive.ui.fragments.getStarted.GetStartedVm" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.getStarted.GetStartedFragment">

        <TextView
            android:id="@+id/txtSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:padding="@dimen/_5sdp"
            android:onClick="@{getStartedVm::onClickSkip}"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/skip"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtSkip"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/choose_your_interest"
                android:textSize="@dimen/_15sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:text="@string/and_get_a_free_gift"
                android:textSize="@dimen/_12sdp"/>
        </LinearLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_200sdp"
            android:layout_centerInParent="true"
            app:lottie_rawRes="@raw/hello_anim"
            app:lottie_colorFilter="@color/default_pink"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:layout_marginVertical="@dimen/_15sdp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/options_bg"
                android:orientation="vertical"
                android:layout_margin="@dimen/_10sdp"
                android:padding="@dimen/_7sdp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:padding="@dimen/_7sdp"
                    android:src="@drawable/img_piano"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:text="@string/artists"
                    android:textSize="@dimen/_13sdp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/_7sdp"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/options_bg"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@drawable/img_dating"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:text="@string/dating"
                    android:textSize="@dimen/_13sdp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/_7sdp"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/options_bg"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@drawable/img_globe"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/nearby"
                    android:textSize="@dimen/_13sdp"/>

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>
</layout>