<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="leaderboardVm"
            type="com.love.lovelive.ui.fragments.home.leader.LeaderBoardVm" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.fragments.home.leader.LeaderBoardFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:src="@drawable/baseline_arrow_back_24"
                android:id="@+id/imgBack"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/imgBack"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:id="@+id/txtCreators"
                android:text="@string/creators"
                android:onClick="@{leaderboardVm::onClickCreators}"
                android:textColor="@color/grey"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:onClick="@{leaderboardVm::onClickFamilies}"
                    android:id="@+id/txtFamilies"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:text="@string/families"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_20sdp"
                    android:textStyle="bold" />

            </LinearLayout>


        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/creators_categories_bg"
            android:layout_marginVertical="@dimen/_5sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:padding="@dimen/_2sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/live"
                android:id="@+id/txtLive"
                android:onClick="@{leaderboardVm::onClickLive}"
                android:paddingHorizontal="@dimen/_8sdp"
                android:paddingVertical="@dimen/_5sdp"
                android:textSize="@dimen/_12sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daily"
                android:id="@+id/txtDaily"
                android:onClick="@{leaderboardVm::onClickDaily}"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:paddingHorizontal="@dimen/_8sdp"
                android:paddingVertical="@dimen/_5sdp"
                android:textSize="@dimen/_12sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_time"
                android:id="@+id/txtAllTime"
                android:onClick="@{leaderboardVm::onClickAllTime}"
                android:paddingHorizontal="@dimen/_8sdp"
                android:paddingVertical="@dimen/_5sdp"
                android:textSize="@dimen/_12sdp"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/leaderboard_item"
            setRecyclerviewAdapter="@{leaderboardVm.leaderBoardAdapter}"
            itemList="@{leaderboardVm.list}"
            />



    </LinearLayout>
</layout>