<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingVertical="@dimen/_5sdp"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:id="@+id/img_profile"
                android:src="@drawable/place_holder_1"
                android:layout_margin="@dimen/_5sdp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/img_profile"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/denis"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_17_05_2023_11_25"
                    android:textSize="@dimen/_9sdp"/>

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_more_vert_24"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="@dimen/_5sdp"/>

        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_180sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:src="@drawable/rectangle"
            android:scaleType="centerCrop"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_margin="@dimen/_5sdp"
            android:layout_height="wrap_content">
            
            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/icons8_like_50"
                android:layout_margin="@dimen/_5sdp"
                android:id="@+id/imgLike"/>

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_comment"
                android:id="@+id/imgComment"
                android:layout_toEndOf="@id/imgLike"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="@dimen/_5sdp"/>

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_share"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_toEndOf="@id/imgComment"
                android:layout_centerVertical="true"/>

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_gift"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            android:text="@string/congratulations_iyah_for_reaching_10_million_diamonds_nhttps_www_google_com"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp"
            android:textStyle="bold"
            android:text="@string/show_all_comments_823"/>




    </LinearLayout>
</layout>